Use vscodium-web forked version with ubuntu 26.04
-- Changes to support sim build for 2027-alpha7 wpilibs